+ fixed all methods + added Gender Enum